se crea el show del chat
